--- a/example/index.html
+++ b/example/index.html
@@ -39,7 +39,7 @@
       <div id="chart-1"></div>
 
       <script type="text/javascript">
-        var utils = d3.compose.helpers.utils;
+        var utils = d3.compose.utils;
         var chart = d3.select('#chart-1')
           .chart('Compose', function(data) {
             var scales = {
