--- a/example/debug.html
+++ b/example/debug.html
@@ -56,7 +56,7 @@
   <script type="text/javascript">
   var chart = d3.select('#chart').chart('Compose').width(600).height(400);
   var config = {charts: {}, components: {}};
-  var utils = d3.compose.helpers.utils;
+  var utils = d3.compose.utils;
   var data = {
     increasing: [
       {key: 'a', name: 'A', values: [1, 2, 3, 4, 5]},
