Update margins handling

--- a/example/index.html
+++ b/example/index.html
@@ -175,6 +175,7 @@
           })
           .width(600)
           .height(400)
+          .margins({right: 30})
           .responsive(false);
 
         chart.draw(data['chart-2']);
