Simplify and refactor property

--- a/example/index.html
+++ b/example/index.html
@@ -290,7 +290,9 @@
             ];
           })
           .width(600)
-          .height(400);
+          .height(400)
+          .duration(1000)
+          .delay(200);
 
         chart.draw(data['chart-3']);
       </script>
