Enable dynamic label position

--- a/example/index.html
+++ b/example/index.html
@@ -212,6 +212,7 @@
             ];
           })
           .duration(1000)
+          .margins({bottom: 30})
           .width(600)
           .height(400);
 
