Fix Axis delay + duration bug
- Simplify Axis (remove three-phase draw)
- Fix delay + duration bug that arose from three-phase draw

--- a/example/debug.html
+++ b/example/debug.html
@@ -100,7 +100,7 @@
         config.charts.lines2 = lines2;
       }
 
-      config.components.yAxis = yAxis = d3c.axis('axis', {position: 'left', scale: scales.y});
+      config.components.yAxis = yAxis = d3c.axis('axis', {scale: scales.y, delay: 250, duration: 750});
       var legend = d3c.legend('component_2', {position: 'right', charts: ['lines', 'chart_2']});
       var bottomXAxis = d3c.axis('component_2', {position: 'bottom', scale: scales.x});
       var topXAxis = d3c.axis('component_2', {position: 'top', scale: scales.x});
