--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@ scripts: |
         <li>Layout charts and components automatically</li>
         <li>Powerful foundation for creating custom charts and components</li>
       </ul>
-      <a class="btn btn-lg home-call-to-action" href="{{ site.baseurl }}/docs/#downloads">Download d3.compose</a>
+      <div class="home-links">
+        <a class="btn btn-lg home-call-to-action" href="{{ site.baseurl }}/docs/#downloads">Download d3.compose</a>
+
+        <div class="home-github-links">
+          <iframe src="https://ghbtns.com/github-btn.html?user=csnw&repo=d3.compose&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=csnw&repo=d3.compose&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+        </div>
+      </div>
     </div>
   </div>
 </div></section>
